--- a/html/bevezetes.html
+++ b/html/bevezetes.html
@@ -331,14 +331,14 @@
                 </li>
                 <h4>Kérdések:</h4>
                 <p>
-                    <a href="./tasks/kerdesek.html" target="_self"
+                    <a href="./tasks/bevezetes_kerdesek.html" target="_self"
                         ><span class="kerdes">Kérdezz-felelek</span></a
                     >
                 </p>
                 <h4>Feladatok:</h4>
                 <p>
-                    <a href="./tasks/feladatok.html" target="_self"
-                        ><span class="kerdes">Példa feladatok</span></a
+                    <a href="./tasks/bevezetes_feladatok.html" target="_self"
+                        ><span class="kerdes">Példafeladatok</span></a
                     >
                 </p>
                 <h4>Források:</h4>
