--- a/html/head_elem.html
+++ b/html/head_elem.html
@@ -55,8 +55,9 @@
                             A weboldal címe. Ez jelenik meg az oldal fülén
                             (<span class="kiemel">tab</span>), a böngésző
                             címsorában (<span class="kiemel">title bar</span>),
-                            illetve ezen a néven kerül elmentésre a böngésző
-                            könyvjelzői, kedvencei közé.
+                            a böngészőbeli előzményekben illetve ezen a néven
+                            kerül elmentésre a böngésző könyvjelzői, kedvencei
+                            közé.
                         </li>
                         <li>Elvárt egy HTML dokumentumban!</li>
                         <li>
@@ -79,7 +80,7 @@
                     </ul>
                 </li>
                 <li>
-                    <span class="kiemel">favicon (favorite icon)</span>: az
+                    <span class="kiemel">Favicon (favorite icon)</span>: az
                     oldal fülén a cím (<span class="kiemel">title</span>)
                     mellett balra található kis kép.
                 </li>
@@ -179,6 +180,18 @@
                         </li>
                     </ul>
                 </li>
+                <h4>Kérdések:</h4>
+                <p>
+                    <a href="./tasks/head_elem_kerdesek.html" target="_self"
+                        ><span class="kerdes">Kérdezz-felelek</span></a
+                    >
+                </p>
+                <h4>Feladatok:</h4>
+                <p>
+                    <a href="./tasks/head_elem_feladatok.html" target="_self"
+                        ><span class="kerdes">Példafeladatok</span></a
+                    >
+                </p>
                 <h4>Források:</h4>
                 <p>
                     <a
