--- a/html/tasks/bevezetes_feladatok.html
+++ b/html/tasks/bevezetes_feladatok.html
@@ -46,12 +46,24 @@
                 <h4>Feladatok:</h4>
                 <li>
                     Készíts egy egyszerű HTML oldalt, amely csak a legfontosabb
-                    elemeket (html, head, title, body) tartalmazza?
+                    elemeket (html, head, title, body) tartalmazza!
                     <img src="./kep_02.jpg" alt="kép" />
                     <a
-                        href="./solutions/feladat_1.txt"
+                        href="./solutions/feladat_01.txt"
                         class="feladat_megoldas"
-                        download="feladat_1 megoldása"
+                        download="feladat_01 megoldása"
+                        >Megoldás</a
+                    >
+                </li>
+                <li>
+                    Legalább 10 attribútum segítségével hozz létre egy alap HTML
+                    oldalt! Mind a head, mind body elemben legyenek
+                    attribútumok.
+                    <img src="./kep_02.jpg" alt="kép" />
+                    <a
+                        href="./solutions/feladat_02.txt"
+                        class="feladat_megoldas"
+                        download="feladat_02 megoldása"
                         >Megoldás</a
                     >
                 </li>
