--- a/nyitolap/index.html
+++ b/nyitolap/index.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+        />
         <link rel="stylesheet" href="../stilus/stilus.css" />
         <link
             rel="shortcut icon"
@@ -23,6 +27,9 @@
         <title>Nyitólap</title>
     </head>
     <body>
+        <a href="#tarto" target="_self">
+            <span class="material-symbols-outlined"> arrow_circle_up </span>
+        </a>
         <div id="tarto">
             <h1>Minden Ami Tananyag</h1>
             <h4>Webszerkesztés</h4>
@@ -33,7 +40,7 @@
             </ul>
             <h4>Programozás</h4>
             <ul>
-                <li>Programozás és Fejlesztői környezetek</li>
+                <li>Programozás és IDE-k</li>
                 <li><a href="../python/nyito.html">Python</a></li>
                 <li>C#</li>
                 <li>Java</li>
@@ -51,6 +58,12 @@
             <h4>IT alapok I</h4>
             <ul>
                 <li><a href="../pc/nyito.html">PC</a></li>
+            </ul>
+            <h4>Fejlesztői eszközök</h4>
+            <ul>
+                <li><a href="../git_github/nyito.html">Git és GitHub</a></li>
+                <li>Trello</li>
+                <li>Figma</li>
             </ul>
         </div>
     </body>
