--- a/pc/bevezetes.html
+++ b/pc/bevezetes.html
@@ -110,23 +110,27 @@
                             A <span class="kiemel">firmware</span> kifejezést
                             eredetileg a hardverkomponens cseréje nélkül
                             megváltoztatható, magasabb szintű szoftverrel
-                            szembeállítva definiálták. A firmware feladata
+                            szembeállítva definiálták. A
+                            <span class="kiemel">firmware</span> feladata
                             jellemzően az olyan, igen alacsony szintű műveletek
                             elvégzése, melyek nélkül az eszköz teljesen
                             működésképtelen lenne.
                         </li>
                         <li>
-                            Firmware-t tartalmazó végfelhasználói eszközök
-                            például a távirányító, a számológép,
-                            számítógép-alkatrészek mint a merevlemez,
-                            billentyűzet, a monitor, a memóriakártya.
+                            <span class="kiemel">Firmware</span>-t tartalmazó
+                            végfelhasználói eszközök például a távirányító, a
+                            számológép, számítógép-alkatrészek mint a
+                            merevlemez, billentyűzet, a monitor, a
+                            memóriakártya.
                         </li>
                         <li>
                             Tudományos műszerek, ipari robotok is tartalmaznak
-                            firmware-t, ahogy a bonyolultabb fogyasztási cikkek
-                            is, mint a mobiltelefonok, digitális
-                            fényképezőgépek, szintetizátorok stb. alap- és
-                            komplikáltabb funkcióit is a firmware működteti.
+                            <span class="kiemel">firmware</span>-t, ahogy a
+                            bonyolultabb fogyasztási cikkek is, mint a
+                            mobiltelefonok, digitális fényképezőgépek,
+                            szintetizátorok stb. alap- és komplikáltabb
+                            funkcióit is a
+                            <span class="kiemel">firmware</span> működteti.
                         </li>
                         <li>
                             <a
