--- a/git_github/index.html
+++ b/git_github/index.html
@@ -21,19 +21,16 @@
                 margin-bottom: 1em;
             }
         </style>
-        <title>CSS</title>
+        <title>Git és GitHub</title>
     </head>
     <body>
         <a href="#tarto" target="_self">
             <span class="material-symbols-outlined"> arrow_circle_up </span>
         </a>
         <div id="tarto">
-            <h1><a href="../nyitolap/index.html">CSS</a></h1>
+            <h1><a href="../nyitolap/index.html">Git és GitHub</a></h1>
             <ul>
                 <li><a href="./bevezetes.html">Bevezetés</a></li>
-                <li><a href="./szelektorok.html">Szelektorok</a></li>
-                <li><a href="./szinek.html">Színek</a></li>
-                <li><a href="./hatter.html">Háttér</a></li>
             </ul>
         </div>
     </body>
