--- a/figma/eszkosztar_elemei.html
+++ b/figma/eszkosztar_elemei.html
@@ -73,6 +73,11 @@
                         </li>
                     </ul>
                 </li>
+                <li>
+                    Tökéletes négyzet (kör, sokszög) rajzolásához szerkesztés
+                    közben folyamatosan tartsuk lenyomva a
+                    <span class="kiemel">shift</span> billentyűt.
+                </li>
                 <img src="./images/kep_23.png" />
                 <li>
                     A téglalap baloldalán és fötötte látható egy-egy kék
@@ -110,7 +115,11 @@
                 <img src="./images/kep_22.png" />
                 <li>Sarkok lekerekítése és elforgatás beállítása.</li>
                 <img src="./images/kep_24.png" />
-                <li>Poligonok csúcsszámának beállítása.</li>
+                <li>
+                    Poligonok csúcsszámának beállítása a
+                    <span class="kiemel">count</span> gomb szabályozásával
+                    történik.
+                </li>
                 <img src="./images/kep_25.png" />
                 <li>
                     Az alakzatok szerkesztői módjába az alakzaton való dupla
@@ -157,11 +166,22 @@
                 </li>
                 <img src="./images/kep_28.png" />
                 <li>
+                    Új elemként a vonalvastagsággal és töredezettséggel tudunk
+                    játszani.
+                </li>
+                <img src="./images/kep_30.png" />
+                <li>
                     Szövegdobozt elhelyezni a T betű lenyomása után a kurzor
                     segítségével tudunk. Azután a szöveget a szokásos módokon
                     formázhatjuk.
                 </li>
                 <img src="./images/kep_29.png" />
+                <li>
+                    A szövegdoboz és a szöveg egyidejű formázásához jelöljük ki
+                    a szövegdobozt, majd a
+                    <span class="kiemel">shift</span> gomb lenyomása után a
+                    szöveget.
+                </li>
                 <h4>Források:</h4>
                 <p>
                     <a href="https://www.figma.com/"
