--- a/figma/index.html
+++ b/figma/index.html
@@ -35,10 +35,18 @@
                 <li>
                     <a href="./eszkosztar_elemei.html">Eszkösztár elemei</a>
                 </li>
-                <li><a href="#">Logikai műveletek</a></li>
-                <li><a href="#">Auto Layout</a></li>
-                <li><a href="#">Komponensek és Variánsok</a></li>
+                <li>
+                    <a href="./logikai_muveletek.html">Logikai műveletek</a>
+                </li>
+                <li><a href="./kepek.html">Képek</a></li>
+                <li><a href="./auto_layout.html">Auto Layout</a></li>
+                <li>
+                    <a href="./komponensek_es_variansok.html"
+                        >Komponensek és Variánsok</a
+                    >
+                </li>
                 <li><a href="#">Prototípusok</a></li>
+                <li>Rétegek</li>
                 <li>
                     <a href="./pluginek_es_widgetek.html"
                         >Plugin-ek és Widget-ek</a
