--- a/html/tasks/bevezetes_feladatok.html
+++ b/html/tasks/bevezetes_feladatok.html
@@ -45,13 +45,21 @@
             <ol>
                 <h4>Feladatok:</h4>
                 <li>
-                    Készíts egy egyszerű HTML oldalt, amely csak a legfontosabb
-                    elemeket (html, head, title, body) tartalmazza!
+                    Mentsd le és nyisd meg a
+                    <span class="kiemel">Feladat</span> linkhez tartalmazó HTML
+                    állományt egy szerkesztői környezetben (pl. Visual Studio
+                    Code). Old meg az ott megadott feldatokat!
                     <img src="./kep_02.jpg" alt="kép" />
                     <a
-                        href="./solutions/feladat_01.txt"
+                        href="./questions/feladat_01.html"
+                        class="feladat_kerdes"
+                        download="feladat_01.html"
+                        >Feladat</a
+                    >
+                    <a
+                        href="./solutions/feladat_01_megoldas.html"
                         class="feladat_megoldas"
-                        download="feladat_01 megoldása"
+                        download="feladat_01_megoldas.html"
                         >Megoldás</a
                     >
                 </li>
