--- a/html/tasks/bevezetes_kerdesek.html
+++ b/html/tasks/bevezetes_kerdesek.html
@@ -228,7 +228,7 @@
                         </li>
                         <li>
                             Egy beágyazott elem nem tartalmazhat egy blokkszintű
-                            elemet!
+                            elemet.
                         </li>
                         <li>Általában van tartalma.</li>
                     </ol>
@@ -242,7 +242,7 @@
                     Melyik állítás nem igaz az attribútumokra?
                     <img src="./kep_01.jpg" alt="kép" />
                     <ol>
-                        <li>Mindig az elem záró címkéjében találhatóak.</li>
+                        <li>Mindig az elem zárócímkéjében találhatóak.</li>
                         <li>
                             Rendszerint név="érték" (<span class="kiemel"
                                 >name="value"</span
@@ -252,7 +252,7 @@
                         <li>Minden HTML elemnek lehetnek.</li>
                     </ol>
                     <div class="megoldas">
-                        Mindig az elem záró címkéjében találhatóak.
+                        Mindig az elem zárócímkéjében találhatóak.
                     </div>
                     <button onclick="megmutat(event)" class="mutat">
                         Megoldás
