--- a/figma/komponensek_es_variansok.html
+++ b/figma/komponensek_es_variansok.html
@@ -14,7 +14,7 @@
             href="../images/logo.png"
             type="image/x-icon"
         />
-        <title>Figma Plugin-ek és Widget-ek</title>
+        <title>Figma komponensek és Variánsok</title>
     </head>
     <body>
         <a href="#tarto" target="_self">
@@ -23,36 +23,22 @@
         <div id="tarto">
             <h1>
                 <a href="./index.html" target="_self"
-                    >Figma - Plugin-ek és Widget-ek</a
+                    >Figma - Komponensek és Variánsok</a
                 >
             </h1>
             <ol>
-                <h4>Alapvető dolgok:</h4>
+                <h4>Komponensek:</h4>
                 <li>
-                    Az eszköztár (<span class="kiemel">toolbar</span>) egyik
-                    legfontosabb eleme a
-                    <span class="kiemel">Resources</span> fül. Itt találhatóak:
-                    <ul>
-                        <li>
-                            <span class="kiemel">Components</span> - komponensek
-                        </li>
-                        <li>
-                            <span class="kiemel">Plugins</span> - beépülő
-                            modulok
-                        </li>
-                        <li>
-                            <span class="kiemel">Widgets</span> - ablakelemek
-                        </li>
-                    </ul>
-                    Itt most csak az utóbbi kettővel fogunk foglalkozni.
+                    Folytassuk az
+                    <a class="link" href="./auto_layout.html">Auto Layout</a>
+                    részben elkezdett dolgot. Tegyük fel, hogy a gombot sok
+                    helyen fogom felhasználni és hirtelen meg kell változtatni
+                    valamelyik tulajdonságát. Például a háttérszínét.
                 </li>
-                <img src="./images/kep_31.png" />
                 <li>
-                    Komponensek a rétegek táblán (<span class="kiemel"
-                        >Layers Pane</span
-                    >) is hozzáférhetőek.
+                    <span class="kiemel">Komponens - component</span>:
+                    újrafelhasználható elem a keretekben.
                 </li>
-                <img src="./images/kep_32.png" />
                 <h4>Források:</h4>
                 <p>
                     <a href="https://www.figma.com/"
